maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:18: error: not found: value nil
			if (getIndication(i,j)==10000) setIndication(i,j,nil)
                                                                         ^